# upscale_shader_py

./: .gitignore  LICENSE  README.md  pyproject.toml
resources/shaders/: fragment_shader.glsl  simple_fragment.glsl  simple_vertex.glsl  texture_fragment.glsl  texture_vertex.glsl
src/upscale_shader_py/: egl.py  fbo.py  glfw_ex.py  glfw_ex_debug.py  glfw_init.py  glu_init.py  osmesa.py
